--- a/Engine/Code/Engine/Engine.vcxproj.filters
+++ b/Engine/Code/Engine/Engine.vcxproj.filters
@@ -259,6 +259,15 @@
     <ClCompile Include="Profiler\Profiler.cpp">
       <Filter>Profiler</Filter>
     </ClCompile>
+    <ClCompile Include="Profiler\ProfilerReportEntry.cpp">
+      <Filter>Profiler</Filter>
+    </ClCompile>
+    <ClCompile Include="Profiler\ProfilerReport.cpp">
+      <Filter>Profiler</Filter>
+    </ClCompile>
+    <ClCompile Include="Profiler\ProfilerWindow.cpp">
+      <Filter>Profiler</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Math\Vector2.hpp">
@@ -529,6 +538,15 @@
       <Filter>Math</Filter>
     </ClInclude>
     <ClInclude Include="Profiler\Profiler.hpp">
+      <Filter>Profiler</Filter>
+    </ClInclude>
+    <ClInclude Include="Profiler\ProfilerReportEntry.hpp">
+      <Filter>Profiler</Filter>
+    </ClInclude>
+    <ClInclude Include="Profiler\ProfilerReport.hpp">
+      <Filter>Profiler</Filter>
+    </ClInclude>
+    <ClInclude Include="Profiler\ProfilerWindow.hpp">
       <Filter>Profiler</Filter>
     </ClInclude>
   </ItemGroup>
