--- a/Engine/Code/Engine/Engine.vcxproj.filters
+++ b/Engine/Code/Engine/Engine.vcxproj.filters
@@ -268,6 +268,9 @@
     <ClCompile Include="Profiler\ProfilerWindow.cpp">
       <Filter>Profiler</Filter>
     </ClCompile>
+    <ClCompile Include="Core\EngineCommon.cpp">
+      <Filter>General</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Math\Vector2.hpp">
