--- a/Engine/Code/Engine/Engine.vcxproj.filters
+++ b/Engine/Code/Engine/Engine.vcxproj.filters
@@ -268,6 +268,12 @@
     <ClCompile Include="Profiler\ProfilerWindow.cpp">
       <Filter>Profiler</Filter>
     </ClCompile>
+    <ClCompile Include="Core\Threads.cpp">
+      <Filter>General</Filter>
+    </ClCompile>
+    <ClCompile Include="Core\Logger.cpp">
+      <Filter>General</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Math\Vector2.hpp">
@@ -548,6 +554,12 @@
     </ClInclude>
     <ClInclude Include="Profiler\ProfilerWindow.hpp">
       <Filter>Profiler</Filter>
+    </ClInclude>
+    <ClInclude Include="Core\Threads.hpp">
+      <Filter>General</Filter>
+    </ClInclude>
+    <ClInclude Include="Core\Logger.hpp">
+      <Filter>General</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
