--- a/Engine/Code/Engine/Engine.vcxproj
+++ b/Engine/Code/Engine/Engine.vcxproj
@@ -291,6 +291,7 @@
     <ClCompile Include="DevConsole\Command.cpp" />
     <ClCompile Include="DevConsole\DevConsole.cpp" />
     <ClCompile Include="DevConsole\DevConsoleInputBox.cpp" />
+    <ClCompile Include="DevConsole\RemoteCommandService.cpp" />
     <ClCompile Include="InputSystem\AnalogJoystick.cpp" />
     <ClCompile Include="InputSystem\InputSystem.cpp" />
     <ClCompile Include="InputSystem\XboxController.cpp" />
@@ -381,6 +382,7 @@
     <ClInclude Include="DevConsole\Command.hpp" />
     <ClInclude Include="DevConsole\DevConsole.hpp" />
     <ClInclude Include="DevConsole\DevConsoleInputBox.hpp" />
+    <ClInclude Include="DevConsole\RemoteCommandService.hpp" />
     <ClInclude Include="InputSystem\AnalogJoystick.hpp" />
     <ClInclude Include="InputSystem\InputSystem.hpp" />
     <ClInclude Include="InputSystem\InputSystemCommon.hpp" />
