ignore log files

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,5 @@ data/config/user.config
 .vs/
 Temporary/
 SDST/DoomClone/Run_Win32/KillNazis.zip
+SDST/Protogame/Run_Win32/Log/log_2018-8-11_14-22-54.txt
+SDST/Protogame/Run_Win32/Log/log*.txt
