--- a/Engine/Code/Engine/Engine.vcxproj
+++ b/Engine/Code/Engine/Engine.vcxproj
@@ -316,6 +316,7 @@
     <ClCompile Include="Math\Vector4.cpp" />
     <ClCompile Include="Net\Net.cpp" />
     <ClCompile Include="Net\NetAddress.cpp" />
+    <ClCompile Include="Net\NetSession.cpp" />
     <ClCompile Include="Net\Socket.cpp" />
     <ClCompile Include="Net\TCPSocket.cpp" />
     <ClCompile Include="Net\UDPSocket.cpp" />
@@ -411,6 +412,9 @@
     <ClInclude Include="Math\Vector4.hpp" />
     <ClInclude Include="Net\Net.hpp" />
     <ClInclude Include="Net\NetAddress.hpp" />
+    <ClInclude Include="Net\NetConnection.hpp" />
+    <ClInclude Include="Net\NetMessage.hpp" />
+    <ClInclude Include="Net\NetSession.hpp" />
     <ClInclude Include="Net\Socket.hpp" />
     <ClInclude Include="Net\TCPSocket.hpp" />
     <ClInclude Include="Net\UDPSocket.hpp" />
